--- a/estagio.html
+++ b/estagio.html
@@ -1,1 +1,20 @@
-<h1>Relatório de Estágio</h1>
+<!DOCTYPE html>
+
+<html>
+<body>
+    <h1>Relatótio de Estágio</h1>
+    <h2>1.Introdução</h2>
+
+
+    <h3>1.1.Objetivos</h3>
+
+    <h4>1.1.1.Objetivo Geral</h4>
+
+    
+    <h4>1.1.1.Objetivos específicos</h4>
+
+    <h2>Atividades Realizadas</h2>
+
+    <h3>Atividade 01</h3>
+</body>
+</html>
