--- a/estagio.html
+++ b/estagio.html
@@ -4,17 +4,22 @@
 <body>
     <h1>Relatótio de Estágio</h1>
     <h2>1.Introdução</h2>
-
-
+    <p> O presente relatório de estágio foi elaborado como resultado das atividades desenvolvidas na organização SIFSoft - Empresa Júnior, durante o período de 03/03/2024 a 03/03/2024, sob a supervisão do professor doutor Leonardo Humberto Guimarães Silva.</p>
+    <p> Este documento atende às exigências da Lei 11.788/2008, do Plano Pedagógico do Curso Técnico Integrado em Informática e dos normativos do Instituto Federal do Norte de Minas Gerais - Campus Salinas. 
+    </p>
+    <p> O estágio proporcionou uma valiosa oportunidade de aplicar e relacionar os conteúdos teóricos aprendidos no curso com a prática no ambiente de trabalho, permitindo complementar e aperfeiçoar as competências propostas através de atividades práticas. </p>
+    <p> Portanto, este relatório de estágio destina-se a descrever as atividades desenvolvidas ao longo do estágio e apresentar uma sequência de tópicos organizados para melhorar a compreensão dos trabalhos realizados na empresa:
+    </p>
     <h3>1.1.Objetivos</h3>
 
     <h4>1.1.1.Objetivo Geral</h4>
+    <p>O objetivo geral do estágio supervisionado é adquirir contato com a realidade profissional e empresarial na área de Tecnologia da Informação, permitindo a aplicação prática dos conhecimentos adquiridos ao longo da formação acadêmica no curso Técnico em Informática Integrado ao ensino médio.</p>
 
     
     <h4>1.1.1.Objetivos específicos</h4>
 
     <h2>Atividades Realizadas</h2>
 
-    <h3>Atividade 01</h3>
+    <h3>Atividade 01+++++</h3>
 </body>
 </html>
