--- a/estagio.html
+++ b/estagio.html
@@ -1,25 +1,71 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="pt-BR">
 <body>
     <h1>Relatótio de Estágio</h1>
     <h2>1.Introdução</h2>
-    <p> O presente relatório de estágio foi elaborado como resultado das atividades desenvolvidas na organização SIFSoft - Empresa Júnior, durante o período de 03/03/2024 a 03/03/2024, sob a supervisão do professor doutor Leonardo Humberto Guimarães Silva.</p>
-    <p> Este documento atende às exigências da Lei 11.788/2008, do Plano Pedagógico do Curso Técnico Integrado em Informática e dos normativos do Instituto Federal do Norte de Minas Gerais - Campus Salinas. 
+    <p> 
+        O presente relatório de estágio foi elaborado como resultado das atividades desenvolvidas na organização SIFSoft - Empresa Júnior, durante o período de 03/03/2024 a 03/03/2024, sob a supervisão do professor doutor Leonardo Humberto Guimarães Silva.
     </p>
-    <p> O estágio proporcionou uma valiosa oportunidade de aplicar e relacionar os conteúdos teóricos aprendidos no curso com a prática no ambiente de trabalho, permitindo complementar e aperfeiçoar as competências propostas através de atividades práticas. </p>
-    <p> Portanto, este relatório de estágio destina-se a descrever as atividades desenvolvidas ao longo do estágio e apresentar uma sequência de tópicos organizados para melhorar a compreensão dos trabalhos realizados na empresa:
+    <p> 
+        Este documento atende às exigências da Lei 11.788/2008, do Plano Pedagógico do Curso Técnico Integrado em Informática e dos normativos do Instituto Federal do Norte de Minas Gerais - Campus Salinas. 
     </p>
+    <p> 
+        O estágio proporcionou uma valiosa oportunidade de aplicar e relacionar os conteúdos teóricos aprendidos no curso com a prática no ambiente de trabalho, permitindo complementar e aperfeiçoar as competências propostas através de atividades práticas. 
+    </p>
+    <p> 
+        Portanto, este relatório de estágio destina-se a descrever as atividades desenvolvidas ao longo do estágio e apresentar uma sequência de tópicos organizados para melhorar a compreensão dos trabalhos realizados na empresa:
+    </p>
+
     <h3>1.1.Objetivos</h3>
 
     <h4>1.1.1.Objetivo Geral</h4>
-    <p>O objetivo geral do estágio supervisionado é adquirir contato com a realidade profissional e empresarial na área de Tecnologia da Informação, permitindo a aplicação prática dos conhecimentos adquiridos ao longo da formação acadêmica no curso Técnico em Informática Integrado ao ensino médio.</p>
+    <p>
+        O objetivo geral do estágio supervisionado é adquirir contato com a realidade profissional e empresarial na área de Tecnologia da Informação, permitindo a aplicação prática dos conhecimentos adquiridos ao longo da formação acadêmica no curso Técnico em Informática Integrado ao ensino médio.
+    </p>
 
-    
     <h4>1.1.1.Objetivos específicos</h4>
+    <ul>
+        <li>Aplicar a forma prática os conhecimentos adquiridos durante o curso; </li>
+        <li>Trabalhar com profissionais experientes;</li>
+        <li>Complementar a formação acadêmica;</li>
+        <li>Preparação para o início das atividades profissionais;</li>
+        <li>Aprender a utilizar ferramentas e tecnologias atuais do mercado de TI;</li>
+        <li>Aprimorar a capacidade de trabalhar em equipe e colaborar em projetos;</li>
+    </ul>
 
-    <h2>Atividades Realizadas</h2>
+    <h2>2.Atividades Realizadas</h2>
 
-    <h3>Atividade 01+++++</h3>
+    <h3>2.1.NOME E LOGO DO APLICATIVO</h3>
+    <p>
+        Uma parte essencial do processo de desenvolvimento do aplicativo NOTIFICA
+foi a criação do nome e logo. Esses elementos são fundamentais para estabelecer a
+identidade e a percepção visual do aplicativo para os usuários.
+    </p>
+    <h4>2.1.1 CRIAÇÃO DO NOME DO APLICATIVO</h4>
+    <p>
+        Para a seleção de um nome apropriado para o aplicativo, foi necessário
+realizar uma análise geral, levando em consideração os objetivos do aplicativo. O
+nome “NOTIFICA” foi escolhido por sua simplicidade, clareza e pela capacidade de
+transmitir a principal função do aplicativo: o envio e recebimento de notificações
+entre alunos e instituição sobre ocorrências ou eventos importantes de forma rápida
+e eficiente. Essa funcionalidade visa aprimorar a relação e a comunicação entre
+aluno e instituição de ensino.
+    </p>
+    <h4>2.1.2 CRIAÇÃO DA LOGO DO APLICATIVO</h4>
+    <p>
+        Após a escolha e definição do nome, o próximo passo foi a criação do logo. O
+logo foi projetado para refletir visualmente a essência do aplicativo e comunicar de
+forma instantânea e memorável. Durante o processo de design, foram considerados
+cuidadosamente os elementos que comporiam o logo. Após algumas substituições,
+alterações e refinamentos, chegamos a um logo que tivesse a capacidade de capturar a essência do aplicativo, estabelecendo uma identidade visual forte e
+reconhecível.
+    </p>
+    <p>
+        Na proposta final do logo, foi incorporado o nome do aplicativo em sua
+representação visual. Na ilustração do nome, as letras “IF” se destacam das demais,
+enfatizando a conexão do aplicativo com o Instituto Federal. Essas letras simbolizam
+a aproximação que o app promove entre os estudantes e o IFNMG.
+    </p>
 </body>
 </html>
