--- a/estagio.html
+++ b/estagio.html
@@ -67,5 +67,64 @@ representação visual. Na ilustração do nome, as letras “IF” se destacam 
 enfatizando a conexão do aplicativo com o Instituto Federal. Essas letras simbolizam
 a aproximação que o app promove entre os estudantes e o IFNMG.
     </p>
+    <h3>2.2 PROTOTIPAÇÃO DO APLICATIVO</h3>
+    <p>
+        A prototipagem do aplicativo NOTIFICA foi outra etapa crucial durante o
+processo de desenvolvimento do app. Construir um novo protótipo permitiu a
+visualização e teste das funcionalidades antes da implementação final do aplicativo.
+    </p>
+
+    <h4>2.2.1 FERRAMENTAS UTILIZADAS</h4>
+    <p>
+        Durante o processo de prototipagem do aplicativo NOTIFICA, foram utilizadas
+diversas ferramentas que auxiliaram no design e na criação dos protótipos. Entre as
+principais ferramentas empregadas destacam-se o Figma e o Canva. O Figma foi
+utilizado para desenvolver as telas do aplicativo com designs detalhados, além de
+possibilitar a colaboração e o acesso dos membros do projeto. Por outro lado, o
+Canva foi empregado na criação de alguns elementos visuais do APP, garantindo
+uma aparência atrativa e profissional. O uso conjunto dessas ferramentas
+possibilitou a criação do design do aplicativo com alta fidelidade, permitindo a
+realização de ajustes de forma rápida e eficiente.
+    </p>
+    <h4>2.2.2 DESENVOLVIMENTO DOS PROTÓTIPOS</h4>
+    <p>
+        Para o desenvolvimento dos protótipos, foram criadas telas de alta
+autenticidade nos quais foram incorporados elementos de design visual, como cores,
+tipografia e ícones. Durante a criação dos protótipos, também foram desenvolvidas
+duas versões de design que poderão ser escolhidas para implementação na
+interface do aplicativo. Cada uma das versões possui diferenças de usabilidade,
+afetando a navegabilidade e a funcionalidade do aplicativo.
+O NOTIFICA foi desenvolvido com uma interface que é intuitiva e acolhedora,
+transformando-a em uma plataforma acessível para todos, mesmo para aqueles com
+pouca experiência em tecnologia. Com uma navegação simplificada e instruções
+precisas, os usuários podem explorar todas as funcionalidades do aplicativo com
+facilidade.
+A montagem de novas telas foi baseada nas telas pré existentes, na qual as
+que já existiam foram refeitas e aprimoradas para futuras utilizações.
+As telas que tiveram alterações ou foram adicionadas foram as seguintes:
+        <ol>
+            <li>Tela upload</li>
+            <li>Tela Login/sign up</li>
+            <li>Tela Tela Inicial</li>
+            <li>Tela Avisos</li>
+            <li> Tela Inicial /enviadas</li>
+            <li>Tela Inicial /em progresso</li>
+            <li>Tela Inicial /finalizadas</li>
+            <li>Tela detalhe pedido</li>
+            <li>Tela detalhe pedido/ finalizadas</li>
+            <li>Tela cadastro do pedido</li>
+            <li>Tela Perfil (nova tela)</li>
+        </ol>
+        
+    </p>
+    <h4>2.2.3 RESULTADOS DA PROTOTIPAÇÃO</h4>
+    <p>
+        O processo de prototipagem resultou em protótipos interativos que
+representam fielmente o aplicativo NOTIFICA. No futuro, uma das versões será
+selecionada pela coordenação do projeto para ser implementada no aplicativo,
+garantindo que a identidade visual seja coesa e alinhada ao site administrativo. Isso
+não apenas proporcionará uma experiência consistente em todas as plataformas,
+mas também garantirá que o produto final atenda às necessidades dos usuários.
+    </p>
 </body>
 </html>
