--- a/estagio.html
+++ b/estagio.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
 <body>
     <h1>Relatótio de Estágio</h1>
-    <h2>1.Introdução</h2>
+    <h2>1. Introdução</h2>
     <p> 
         O presente relatório de estágio foi elaborado como resultado das atividades desenvolvidas na organização SIFSoft - Empresa Júnior, durante o período de 03/03/2024 a 03/03/2024, sob a supervisão do professor doutor Leonardo Humberto Guimarães Silva.
     </p>
@@ -19,12 +19,12 @@
     <hr>
     <h3>1.1.Objetivos</h3>
 
-    <h4>1.1.1.Objetivo Geral</h4>
+    <h4>1.1.1. Objetivo Geral</h4>
     <p>
         O objetivo geral do estágio supervisionado é adquirir contato com a realidade profissional e empresarial na área de Tecnologia da Informação, permitindo a aplicação prática dos conhecimentos adquiridos ao longo da formação acadêmica no curso Técnico em Informática Integrado ao ensino médio.
     </p>
 
-    <h4>1.1.1.Objetivos específicos</h4>
+    <h4>1.1.1. Objetivos específicos</h4>
     <ul>
         <li>Aplicar a forma prática os conhecimentos adquiridos durante o curso; </li>
         <li>Trabalhar com profissionais experientes;</li>
@@ -34,15 +34,15 @@
         <li>Aprimorar a capacidade de trabalhar em equipe e colaborar em projetos;</li>
     </ul>
     <hr>
-    <h2>2.Atividades Realizadas</h2>
+    <h2>2. Atividades Realizadas</h2>
 
-    <h3>2.1.NOME E LOGO DO APLICATIVO</h3>
+    <h3>2.1. NOME E LOGO DO APLICATIVO</h3>
     <p>
         Uma parte essencial do processo de desenvolvimento do aplicativo NOTIFICA
 foi a criação do nome e logo. Esses elementos são fundamentais para estabelecer a
 identidade e a percepção visual do aplicativo para os usuários.
     </p>
-    <h4>2.1.1 CRIAÇÃO DO NOME DO APLICATIVO</h4>
+    <h4>2.1.1. CRIAÇÃO DO NOME DO APLICATIVO</h4>
     <p>
         Para a seleção de um nome apropriado para o aplicativo, foi necessário
 realizar uma análise geral, levando em consideração os objetivos do aplicativo. O
@@ -52,7 +52,7 @@ entre alunos e instituição sobre ocorrências ou eventos importantes de forma 
 e eficiente. Essa funcionalidade visa aprimorar a relação e a comunicação entre
 aluno e instituição de ensino.
     </p>
-    <h4>2.1.2 CRIAÇÃO DA LOGO DO APLICATIVO</h4>
+    <h4>2.1.2. CRIAÇÃO DA LOGO DO APLICATIVO</h4>
     <p>
         Após a escolha e definição do nome, o próximo passo foi a criação do logo. O
 logo foi projetado para refletir visualmente a essência do aplicativo e comunicar de
@@ -67,14 +67,14 @@ representação visual. Na ilustração do nome, as letras “IF” se destacam 
 enfatizando a conexão do aplicativo com o Instituto Federal. Essas letras simbolizam
 a aproximação que o app promove entre os estudantes e o IFNMG.
     </p>
-    <h3>2.2 PROTOTIPAÇÃO DO APLICATIVO</h3>
+    <h3>2.2. PROTOTIPAÇÃO DO APLICATIVO</h3>
     <p>
         A prototipagem do aplicativo NOTIFICA foi outra etapa crucial durante o
 processo de desenvolvimento do app. Construir um novo protótipo permitiu a
 visualização e teste das funcionalidades antes da implementação final do aplicativo.
     </p>
 
-    <h4>2.2.1 FERRAMENTAS UTILIZADAS</h4>
+    <h4>2.2.1. FERRAMENTAS UTILIZADAS</h4>
     <p>
         Durante o processo de prototipagem do aplicativo NOTIFICA, foram utilizadas
 diversas ferramentas que auxiliaram no design e na criação dos protótipos. Entre as
@@ -86,7 +86,7 @@ uma aparência atrativa e profissional. O uso conjunto dessas ferramentas
 possibilitou a criação do design do aplicativo com alta fidelidade, permitindo a
 realização de ajustes de forma rápida e eficiente.
     </p>
-    <h4>2.2.2 DESENVOLVIMENTO DOS PROTÓTIPOS</h4>
+    <h4>2.2.2. DESENVOLVIMENTO DOS PROTÓTIPOS</h4>
     <p>
         Para o desenvolvimento dos protótipos, foram criadas telas de alta
 autenticidade nos quais foram incorporados elementos de design visual, como cores,
@@ -117,7 +117,7 @@ As telas que tiveram alterações ou foram adicionadas foram as seguintes:
         </ol>
         
     </p>
-    <h4>2.2.3 RESULTADOS DA PROTOTIPAÇÃO</h4>
+    <h4>2.2.3. RESULTADOS DA PROTOTIPAÇÃO</h4>
     <p>
         O processo de prototipagem resultou em protótipos interativos que
 representam fielmente o aplicativo NOTIFICA. No futuro, uma das versões será
@@ -125,6 +125,37 @@ selecionada pela coordenação do projeto para ser implementada no aplicativo,
 garantindo que a identidade visual seja coesa e alinhada ao site administrativo. Isso
 não apenas proporcionará uma experiência consistente em todas as plataformas,
 mas também garantirá que o produto final atenda às necessidades dos usuários.
+    </p>
+    <hr>
+    <h2>3. Conclusão</h2>
+    <p>
+        Ao adquirir mais contato com a teoria aplicada em sala de aula, as atividades
+desenvolvidas relacionadas à formação técnica proporcionaram uma visão geral do
+funcionamento de uma empresa. Por esse motivo, o estágio foi essencial para
+aprimorar a visão profissional dentro de uma empresa, bem como para a atuação
+como Técnica em Informática.
+    </p>
+    <p>
+        Desde o início das atividades exercidas, a maior parte do tempo foi dedicada
+ao design dos protótipos. Esse trabalho foi de grande valor para a formação, pois
+houve um acréscimo de conhecimentos ainda não abordados no curso. Além disso,
+técnicas foram amadurecidas, o relacionamento interpessoal foi aumentando e o
+aprendizado ocorreu conforme as atividades eram desempenhadas.
+    </p>
+    <p>
+        Durante todo esse período, houve contato com ferramentas ainda não
+conhecidas. No estágio, foi possível aprender a utilizá-las e a trabalhar com elas.
+Esse aprendizado gerou um sentimento gratificante, pois trabalhar com essas
+ferramentas era uma novidade.
+    </p>
+    <p>
+        Portanto, a partir do estágio, além de adquirir a primeira experiência
+profissional, também foi possível desempenhar e aplicar os conhecimentos
+adquiridos em sala de aula. Durante o estágio, foi possível desenvolver uma nova
+perspectiva para o futuro, permitindo a construção de um novo projeto de vida para a
+carreira profissional. Em suma, a realização do estágio na SIFSoft - Empresa Júnior
+foi enriquecedora para a formação e contribuiu significativamente para o
+desenvolvimento como pessoa e como técnica.
     </p>
 </body>
 </html>
