--- a/experiencias.html
+++ b/experiencias.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
+
+
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Experiência</title>
-    <link rel="stylesheet" href="css/estilo.css">
+        <title>Experiência/title>
+        <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <h1>Experiência</h1>
     <p>
-        Ao longo da minha jornada acadêmica, tive a oportunidade de trabalhar em projetos que me permitiram aplicar e aprimorar minhas habilidades em tecnologia da informação. Durante meu estágio no projeto desenvolvido sob a supervisão do professor Leonardo, colaborei na criação do aplicativo NOTIFICA, cujo objetivo é melhorar a comunicação entre alunos e a instituição. Utilizei ferramentas como Figma e Canva para prototipagem e design, adquirindo conhecimentos valiosos sobre usabilidade e design de interfaces. Além disso, participei de equipes de desenvolvimento, o que foi fundamental para aprimorar minhas habilidades interpessoais e de trabalho em grupo. Essas experiências foram cruciais para minha formação técnica, proporcionando-me uma visão prática e aplicada do mercado de TI.
+        Ao longo da minha jornada acadêmica, tive a oportunidade de trabalhar em um projeto que me permitiu aplicar e aprimorar minhas habilidades em tecnologia da informação. Durante meu estágio no projeto que estava sendo desenvolvido pelo professor Leonardo, colaborei com o desenvolvimento de um aplicativo, o NOTIFICA, que visa melhorar a comunicação entre alunos e a instituição. Trabalhei com ferramentas como Figma e Canva para prototipagem e design, e aprendi diversas outras coisas durante esse projeto. Além disso, participei de projetos que exigiam colaboração em equipe, o que me ajudou a aprimorar minhas habilidades interpessoais e de trabalho em grupo. Essas experiências foram fundamentais para minha formação técnica.
+
+
     </p>
-    <h2>Linguagens de Programação</h2>
     <ol>
         <li>Python</li>
-        <li>JavaScript</li>
         <li>Java</li>
-        <li>C#</li>
-        <li>PHP</li>
+        <li>C</li>
+        <li>JavaScript</li>
+        <li>C++</li>
     </ol>
-    <a href="index.html">Voltar ao Menu</a>
 </body>
 </html>
+
