--- a/experiencias.html
+++ b/experiencias.html
@@ -14,7 +14,7 @@
         Ao longo da minha jornada acadêmica, tive a oportunidade de trabalhar em um projeto que me permitiu aplicar e aprimorar minhas habilidades em tecnologia da informação. Durante meu estágio no projeto que estava sendo desenvolvido pelo professor Leonardo, colaborei com o desenvolvimento de um aplicativo, o NOTIFICA, que visa melhorar a comunicação entre alunos e a instituição. Trabalhei com ferramentas como Figma e Canva para prototipagem e design, e aprendi diversas outras coisas durante esse projeto. Essa experiência foi fundamental para minha formação técnica.
     </p>
     <hr>
-    <h2>linguagens de programação que tenho preferência</h2>
+    <h2>Linguagens de programação que tenho preferência</h2>
     <ol>
         <li>Python</li>
         <li>Java</li>
