--- a/aspiracoes.html
+++ b/aspiracoes.html
@@ -10,14 +10,15 @@
 <body>
     <h1>Aspirações</h1>
     <p>
-        Minhas aspirações profissionais são diversas. Tenho interesse em atuar em áreas com as quais tenho afinidade e busco me especializar em áreas emergentes. Almejo ocupar cargos que me permitam colaborar com equipes talentosas e enfrentar desafios que impulsionem meu crescimento profissional. Meu objetivo é contribuir de maneira significativa para minhas áreas de atuação, enquanto aprimoro minhas habilidades e conhecimentos.
+        Minhas aspiraçoes são ganhar muito dinheiro sem trabalhar muito. Ou melhor... Ganhar muito dinheiro sem trabalhar    
     </p>
     <ul>
-        <li>Área da Tecnologia da Informação</li>
-        <li>Área de exatas</li>
-        <li>Não tenho certeza desse</li>
-        <li>Não tenho certeza desse também</li>
-        <li>Muito menos certeza desse</li>
+        <li>Embaixadora de casas de aposta</li>
+        <li>Herdeira</li>
+        <li>Agiota</li>
+        <li>Juíza Federal</li>
+        <li>Médica</li>
+        <li>Mestre e doutora em alguma área que eu goste</li>
     </ul>
 </body>
 </html>
