--- a/experiencias.html
+++ b/experiencias.html
@@ -16,6 +16,7 @@
     <hr>
     <h2>Linguagens de programação que tenho preferência</h2>
     <ol>
+        <li>A que dê menos trabalho</li>
         <li>Python</li>
         <li>Java</li>
         <li>C</li>
